ddt/deploy/ddt-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ddt
spec:
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
  selector:
    app: ddt
