ddt/deploy/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/issuer: letsecrypt-prod
  name: ddt-ingress
spec:
  ingressClassName: nginx
  rules:
  - host: digitaldentalteknikk.no
    http:
      paths:
        - backend:
          service:
            name: ddt
            port:
              number: 80
          path: /
          pathType: Prefix
  tls:
  - hosts:
    - digitaldentalteknikk.no
    secretName: ddt-ingress-cert
